source/assets/stylesheets/foundation/_base.sass
// *************************************
//
//   Base
//   -> Tag-level settings
//
// *************************************

html
  background: $c-background
  color: $c-text
  font-family: $b-fontFamily
  font-feature-settings: 'kern'
  font-size: percentage( $b-fontSize / 16px )
  line-height: $b-lineHeight
  word-spacing: em( 1px )

body

  +respond-to( $g-m )
    font-size: percentage( $b-fontSize--m / $b-fontSize )
    line-height: $b-lineHeight--m

// -------------------------------------
//   Block Content
// -------------------------------------

ol, ul, p
  margin-bottom: $b-space
  margin-top: 0

li
  margin-bottom: $b-space-s
  margin-top: 0

pre
  font-family: $b-fontFamily-mono

// ----- Headings ----- //

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4
  color: $c-text-heading
  font-family: $b-fontFamily-heading
  font-weight: $b-fontWeight-bold
  line-height: 1.2
  margin-bottom: $b-space-xs
  margin-top: 0

h1, .h1
  +font-size( ( b: $b-fontSize-h1, m: $b-fontSize-h1--m, l: $b-fontSize-h1--l ) )
  font-weight: $b-fontWeight-normal
  letter-spacing: 0.05em
  text-transform: uppercase
  word-spacing: 0

  +respond-to( $g-m )
    letter-spacing: 0.1em

  +respond-to( $g-l )
    letter-spacing: 0.125em

h2, .h2
  +font-size( ( b: $b-fontSize-h2, m: $b-fontSize-h2--m ) )

  +respond-to($g-m)
    letter-spacing: -1px

// -------------------------------------
//   Inline Content
// -------------------------------------

// ----- Links ----- //

a, %a
  color: $link-color
  font-weight: $b-fontWeight-bold
  text-decoration: none
  transition: $b-transition

  +state
    color: $link--state-color

// ----- Code ----- //

code, kbd
  font-family: $b-fontFamily-mono

// ----- Images ----- //

img, svg
  max-width: 100%
  vertical-align: middle

